fix h3 header cutting off

--- a/hearth/media/css/yogafire.styl
+++ b/hearth/media/css/yogafire.styl
@@ -124,7 +124,7 @@ active_category() {
         }
     }
     .button {
-        bottom: -4px;
+        bottom: -5px;
     }
     .info {
         left: 84px;
@@ -151,8 +151,9 @@ active_category() {
         .info {
             min-height: 90px;
         }
-        h3.tight {
-            padding-bottom: 10px;
+        h3 {
+            line-height: 20px;
+            padding-bottom: 8px;
         }
         .rating {
             bottom: 8px;
@@ -165,7 +166,7 @@ active_category() {
             }
         }
         .button {
-            bottom: 10px;
+            bottom: 5px;
         }
     }
     .detail.top {
